--- a/Minibank.Web/appsettings.json
+++ b/Minibank.Web/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CbrDaily": "https://www.cbr-xml-daily.ru"
 }
