--- a/Minibank.Web/Minibank.Web.csproj
+++ b/Minibank.Web/Minibank.Web.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\Minibank.Data\Minibank.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\BankAccounts" />
+    </ItemGroup>
+
 </Project>
