--- a/Minibank.Web/appsettings.json
+++ b/Minibank.Web/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CbrDaily": "https://www.cbr-xml-daily.ru"
+  "CbrDaily": "https://www.cbr-xml-daily.ru",
+  "PostgresConnectionString": "Host=localhost;Port=5432;Database=minibank;Username=postgres;Password=20010918"
 }
